# speech-api

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.api  Dockerfile.worker  Dockerfile.worker.cuda
migrations/: env.py  script.py.mako
migrations/versions/: 40350ac54731_add_align_column_to_transcription_tasks_.py  4d75b008ff3e_add_new_table_transcription_result.py  5f6d57511cad_initial_migration.py
src/: config.py  enums.py  lifecycle.py  logging.py  main.py  routes.py
src/admins/: __init__.py  models.py
src/api_keys/: __init__.py  dependencies.py  models.py  repositories.py  services.py
src/database/: __init__.py  models.py
src/security/: dependencies.py  hash.py
src/transcription/: __init__.py  dependencies.py  enums.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/users/: __init__.py  models.py
src/utils/: files.py  media.py  retry.py
src/workers/: __init__.py  app.py  db.py  hooks.py  signals.py  speech_transcriber.py  state.py  tasks.py
